--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(coals)
 
 include(CheckIncludeFile)
 
-set(CMAKE_C_FLAGS) "${CMAKE_C_FLAGS} -std=c99 -pendantic -Wall -O3 -march=core2")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -pendantic -Wall -O3 -march=core2")
 
 link_directories("/Users/harm/git/coals/lib/svdlibc")
 link_libraries("/Users/harm/git/coals/lib/svdlibc/libsvd.a")
